<resources>
    <string name="app_name" translatable="false">Poet</string>

    <!-- Strings title text for the text views when there is no data -->
        <string name="empty_partner_list" translatable="true">It\'s a bit lonely here</string>
        <string name="empty_partner_subtitle" translatable="true">Get started by adding a partner</string>

    <!-- String for the overflow menus -->
        <!-- main_activity label strings  -->
        <string name="action_delete_all_entries" translatable="true">Clear All</string>
        <string name="action_settings" translatable="true">Settings</string>

        <!-- editor_activity label strings -->
        <string name="action_save">Save</string>
        <string name="action_delete">Delete</string>
        <string name="action_edit">Edit</string>
        <string name="action_home">Home</string>

    <!-- String for successfully or unsuccessfully inserting the partner into the database -->
        <string name="editor_insert_partner_successful" translatable="true">Added to Partner list</string>
        <string name="editor_insert_partner_failed" translatable="true">An error has occurred</string>
        <string name="editor_delete_partner_successful" translatable="true">Deleted from Partner list</string>
        <string name="editor_delete_partner_failed" translatable="true">An error has occurred</string>

    <!-- Strings for the title of the editor activity [CHAR LIMIT = 15] -->
        <string name="add_partner" translatable="true">Add a partner</string>
        <string name="edit_partner" translatable="true">Edit</string>

    <!-- String for the dialog to continue editing or to save a partner [CHAR LIMIT = 50] -->
        <!-- -Label strings for -->
        <string name="unsaved_changes_dialog_msg" translatable="true">Discard your changes and quit editing?</string>
        <string name="delete_dialog_msg" translatable="true">Are you sure you want to delete this partner?</string>

        <!-- Label dialog button texts for the options and user changes [CHAR LIMIT=20] -->
        <string name="discard" translatable="true">Discard</string>
        <string name="delete" translatable="true">Delete</string>
        <string name="cancel" translatable="true">Cancel</string>
        <string name="keep_editing" translatable="true">Keep Editing</string>

    <!-- Category strings [CHAR LIMIT = 20] -->
    <string name="name_label" translatable="true">Name</string>
    <string name="phone_number_label" translatable="true">Phone</string>
    <string name="status_label" translatable="true">Status</string>
    <string name="gender_label" translatable="true">Gender</string>
    <string name="notes_label" translatable="true">Notes</string>

    <!-- Strings for the possible genders [CHAR LIMIT = 20]-->
    <string name="gender_unknown" translatable="true">Unknown</string>
    <string name="gender_male" translatable="true">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_androgyne">Androgyne</string>
    <string name="gender_neutrosis">Neutrosis</string>
    <string name="gender_agender">Agender</string>
    <string name="gender_intergender">Intergender</string>
    <string name="gender_demiboy">Demiboy</string>
    <string name="gender_demigirl">Demigirl</string>
    <string name="gender_third_gender">Third Gender</string>
    <string name="gender_genderqueer">Genderqueer</string>
    <string name="gender_pangender">Pangender</string>
    <string name="gender_epicene">Epicene</string>
    <string name="gender_genderfluid">Genderfluid</string>
    <string name="gender_transgender">Transgender</string>
    <string name="gender_bigender">Bigender</string>
    <string name="gender_demiagender">Demiagender</string>
    <string name="gender_femme">Femme</string>
    <string name="gender_butch">Butch</string>
    <string name="gender_transvesti_nb">Transvesti n-b</string>
    <string name="gender_aliagender">Aliagender</string>

    <!-- String for the possible relationship statuses [CHAR LIMIT = 20] -->
    <string name="status_boyfriend" translatable="true">Boyfriend</string>
    <string name="status_girlfriend" translatable="true">Girlfriend</string>
    <string name="status_husband" translatable="true">Husband</string>
    <string name="status_wife" translatable="true">Wife</string>
    <string name="status_complicated" translatable="true">It\'s complicated</string>

    <!-- Strings for the SharedPreferences -->
        <!-- Labels for the colour theme ListPreferences -->
        <string name="pref_show_default_theme_label" translatable="true">Default</string>
        <string name="pref_show_dark_theme_label" translatable="true">Dark</string>
        <string name="pref_show_aqua_theme_label" translatable="true">Aqua</string>

        <!-- Keys name for storing colour themes in SharedPreferences -->
        <string name="pref_show_dark_theme_key" translatable="false">show_dark_theme</string>
        <string name="pref_show_aqua_theme_key" translatable="false">show_aqua_theme</string>
        <string name="pref_show_default_theme_key" translatable="false">show_default_theme</string>

        <!-- Labels & Keys for the genders -->
        <string name="pref_show_genders_key" translatable="false">show_genders</string>
        <string name="pref_show_genders_label" translatable="true">Show Genders</string>
        <string name="pref_theme_key" translatable="false">theme</string>
        <string name="pref_theme_label" translatable="true">Themes</string>

        <string name="pref_show_true">Shown</string>
        <string name="pref_show_false">Hidden</string>

        <string name="charging_reminder_notification_title">Lorem Ipsum?</string>
        <string name="charging_reminder_notification_body">Lorem ipsum dolor sit amet, consectetur
            adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

        <string name="main_notification_channel_name">Primary</string>
        <string name="channel_name">Channel Name</string>
        <string name="channel_description">Channel Description</string>

</resources>
